[package]
name = "yew-hooks"
version = "0.1.45"
edition = "2018"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
categories = ["gui", "wasm", "web-programming"]
keywords = ["wasm", "yew", "hooks", "react"]
description = "Hooks for the Yew web framework, inspired by react hook libs like streamich/react-use and alibaba/hooks."
license = "Apache-2.0/MIT"
readme = "../../README.md"
repository = "https://github.com/jetli/yew-hooks"
homepage = "https://github.com/jetli/yew-hooks"
documentation = "https://docs.rs/yew-hooks/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
yew = "0.19.3"
gloo = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = "1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "BeforeUnloadEvent",
    "Element",
    "UrlSearchParams",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "BinaryType",
    "DomRectReadOnly",
    "Navigator",
    "Geolocation",
    "Coordinates",
    "Position",
    "PositionError",
    "PositionOptions",
    "File",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "HtmlMediaElement",
    "TimeRanges",
    "Touch",
    "TouchList",
]

[dev-dependencies]
log = "0.4.8"
