[package]
name = "yew-hooks"
version = "0.4.7"
edition = "2021"
authors = ["Jet Li <jing.i.qin@icloud.com>"]
categories = ["gui", "wasm", "web-programming"]
keywords = ["wasm", "yew", "hooks", "react"]
description = "Hooks for the Yew web framework, inspired by react hook libs like streamich/react-use and alibaba/hooks."
license = "Apache-2.0/MIT"
readme = "../../README.md"
repository = "https://github.com/jetli/yew-hooks"
homepage = "https://github.com/jetli/yew-hooks"
documentation = "https://docs.rs/yew-hooks/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
yew = { version = "0.22.0", features = ["csr"] }
gloo = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = "1"
serde_json = "1"
js-sys = "0.3"
urlencoding = "2"

[dependencies.web-sys]
version = "0.3"
features = [
    "BeforeUnloadEvent",
    "BinaryType",
    "Blob",
    "CloseEvent",
    "Coordinates",
    "CssStyleDeclaration",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "DomRectReadOnly",
    "Element",
    "Event",
    "File",
    "Geolocation",
    "HtmlCollection",
    "HtmlElement",
    "HtmlLinkElement",
    "HtmlMediaElement",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "MessageEvent",
    "Navigator",
    "Permissions",
    "PermissionState",
    "PermissionStatus",
    "Position",
    "PositionError",
    "PositionOptions",
    "StorageEvent",
    "TimeRanges",
    "Touch",
    "TouchList",
    "UrlSearchParams",
    "WebSocket",
    "Document",
    "Performance",
]

[dev-dependencies]
log = "0.4.8"
wasm-bindgen-test = "0.3.14"
